--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   http: ^0.13.4
   provider: ^6.0.2
   shared_preferences: ^2.0.13
+  awesome_snackbar_content: ^0.0.5
   badges: ^2.0.2
   rename: ^2.0.1
 
@@ -52,6 +53,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/
     - assets/icons/
     - assets/images/
  
