--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   http: ^0.13.4
   provider: ^6.0.2
   shared_preferences: ^2.0.13
+  cached_network_image: ^3.2.1
+  getwidget: ^3.0.1
+  lottie: ^1.3.0
   awesome_snackbar_content: ^0.0.5
   badges: ^2.0.2
   rename: ^2.0.1
