--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,12 @@ dependencies:
   cached_network_image: ^3.2.1
   getwidget: ^3.0.1
   lottie: ^1.3.0
+  flutter_iconly: ^1.0.2
   awesome_snackbar_content: ^0.0.5
   badges: ^2.0.2
+  intl: ^0.17.0
+  pay: ^1.0.10
+  flutter_rating_bar: ^4.0.1
   rename: ^2.0.1
 
 dev_dependencies:
@@ -59,6 +63,8 @@ flutter:
     - assets/
     - assets/icons/
     - assets/images/
+    - assets/gpay.json
+    - assets/apppay.json
  
   fonts:
     - family: Gordita
