--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,10 @@ dependencies:
   awesome_snackbar_content: ^0.0.5
   badges: ^2.0.2
   intl: ^0.17.0
-  pay: ^1.0.10
+  pay: ^1.0.9
   flutter_rating_bar: ^4.0.1
+  sqflite: ^2.0.2+1
+  path_provider: ^2.0.11
   rename: ^2.0.1
 
 dev_dependencies:
